--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <!--shapka-->
+    <!--header-->
     <header>
         <nav>
             <a href="./index.html">WEBSTUDIO</a>
@@ -34,12 +34,12 @@
         </address>
     </header>
     <!--content-->
-    <mein>
+    <main>
         <!--block1-->
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
-            <button href="">Order Service</button>
+            <button>Order Service</button> <!-- corrected -->
         </section>
         <!--block2-->
         <section>
@@ -114,11 +114,11 @@
                 </li>
             </ul>   
         </section>
-    </mein>
+    </main>
     <!--footer-->
     <footer>
         <a href="./index.html">WEBSTUDIO</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>  
+        <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>  <!-- corrected -->
     </footer>
 </body>
 </html>
