--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--header-->
     <header>
         <nav>
-            <a>WEBSTUDIO</a>
+            <a href=”./index.html”>WEBSTUDIO</a>
             <ul>
                 <li>
                  <a href="">Studio</a>
@@ -117,7 +117,7 @@
     </main>
     <!--footer-->
     <footer>
-        <a>WEBSTUDIO</a>
+        <a href=”./index.html”>WEBSTUDIO</a>
         <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>  <!-- corrected -->
     </footer>
 </body>
