--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--header-->
     <header>
         <nav>
-            <a href=”./index.html”>WEBSTUDIO</a>
+            <a href=”./index.html”>WebStudio</a>
             <ul>
                 <li>
                  <a href="">Studio</a>
@@ -39,7 +39,7 @@
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
-            <button>Order Service</button> <!-- corrected -->
+            <button type="button">Order Service</button> <!-- corrected -->
         </section>
         <!--block2-->
         <section>
@@ -117,7 +117,7 @@
     </main>
     <!--footer-->
     <footer>
-        <a href=”./index.html”>WEBSTUDIO</a>
+        <a href=”./index.html”>WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>  <!-- corrected -->
     </footer>
 </body>
