--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <section>
             <h1>Effective Solutions
                 for Your Business</h1>
-            <button type="button">Order Service</button> <!-- corrected -->
+            <button type="button">Order Service</button>
         </section>
         <!--block2-->
         <section>
@@ -74,7 +74,7 @@
             <ul>
                 <li>
                     <img
-                    src="./images/reviews/mark-guerrero.png"
+                    src="./images/reviews/mark-guerrero.jpg"
                     alt="Mark Guerrero avatar"
                     width="264"
                     height="260"
@@ -84,7 +84,7 @@
                 </li>
                 <li>
                     <img
-                    src="./images/reviews/tom-ford.png"
+                    src="./images/reviews/tom-ford.jpg"
                     alt="Tom Ford avatar"
                     width="264"
                     height="260"
@@ -94,7 +94,7 @@
                 </li>
                 <li>
                     <img
-                    src="./images/reviews/camila-garcia.png"
+                    src="./images/reviews/camila-garcia.jpg"
                     alt="Camila Garcia avatar"
                     width="264"
                     height="260"
@@ -104,7 +104,7 @@
                 </li>
                 <li>
                     <img
-                    src="./images/reviews/daniel-wilson.png"
+                    src="./images/reviews/daniel-wilson.jpg"
                     alt="Daniel Wilson avatar"
                     width="264"
                     height="260"
@@ -118,7 +118,7 @@
     <!--footer-->
     <footer>
         <p>WebStudio</p>
-        <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>  <!-- corrected -->
+        <p>Increase the flow of customers and sales for your business with digital marketing &amp; growth solutions.</p>
     </footer>
 </body>
 </html>
